# pingpong_tracker_v2

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ci.yml  gtest.yml
.github/workflows/: ci.yml  install_dependencies.sh
config/: config.yaml
scripts/: _play-stream  install_dependencies.sh  play-stream.sh
src/: runtime.cpp
src/kernel/: capturer.cpp  capturer.hpp  identifier.cpp  identifier.hpp  visualization.cpp  visualization.hpp
src/module/capturer/: common.hpp  hikcamera.cpp  hikcamera.hpp  local_video.cpp  local_video.hpp  video.cpp  video.hpp
src/module/debug/: action_throttler.hpp  framerate.hpp
src/module/debug/visualization/: stream_context.cpp  stream_context.hpp  stream_session.cpp  stream_session.hpp
src/module/identifier/: ball_detection.cpp  ball_detection.hpp  model.cpp  model.hpp
src/module/predictor/: ukf_parameters.hpp
src/utility/: clock.hpp  panic.cpp  panic.hpp  pimpl.hpp  serializable.hpp  times_limit.hpp
src/utility/ball/: ball.hpp
src/utility/configure/: configuration.hpp  parameters.cpp  parameters.hpp
src/utility/image/: ball.cpp  ball.hpp  image.cpp  image.details.hpp  image.hpp
src/utility/math/: point.hpp  sigmoid.hpp
src/utility/math/kalman_filter/: ukf.hpp
src/utility/math/kalmanfilter/: ekf.hpp
src/utility/model/: ball_detection.hpp
src/utility/singleton/: running.cpp  running.hpp
src/utility/thread/: spsc_queue.hpp  workers.cpp  workers.hpp
tests/: .clang-tidy  CMakeLists.txt  assets.yml  download_assets.sh  model_test.cpp  serializable.cpp  test_main.cpp
